--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>公交管家-司机信息显示界面</title>
-    <script src="../JS/vue.js"></script>
-    <link href="css/info.css" rel="stylesheet">
+    <script src="./JS/vue.js"></script>
+    <link href="css/bar.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
 </head>
