--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -16,9 +16,29 @@
             width: 98.5vw;
         }
     </style>
+    <link href="css/bar.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5">
+        <div class="navbar-collapse justify-content-between" id="toolbar">
+            <a href="index1.html" class="navbar-brand mx-5 d-lg-block">
+                <img src="img/logo.png" width="250px">
+                <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
+            </a>
+            <div class="navbar-nav ml-auto py-0">
+                <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />概况</a>
+                <a href="#story" class="fontsize"><img src="img/路线.svg" class="gap" width="30px" />路线</a>
+                <a href="#gallery" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
+                <a href="#gallery" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
+            </div>
+            <div id="box">
+                <input type="search" name="search" placeholder="请输入查找司机关键词">
+                <div id="search">搜索</div>
+            </div>
+        </div>
+    </nav>
     <div id="map"></div>
 </body>
 <script src="./JS/map.js"></script>
