--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <title>公交管家-司机信息显示界面</title>
     <script src="JS/vue.js"></script>
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/bar.css" rel="stylesheet">
 
-    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
+    <!-- navbar可调整菜单宽度 -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5">
         <div class="navbar-collapse justify-content-between" id="toolbar">
             <a href="index1.html" class="navbar-brand mx-5 d-lg-block">
@@ -18,8 +19,7 @@
                 <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
             </a>
             <div class="navbar-nav ml-auto py-0">
-                <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />概况</a>
-                <a href="#story" class="fontsize"><img src="img/路线.svg" class="gap" width="30px" />路线</a>
+                <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
                 <a href="#gallery" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
                 <a href="#gallery" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
             </div>
@@ -30,39 +30,52 @@
         </div>
     </nav>
 
-
+    <!-- py-*可以调整司机图标到顶部的距离 -->
     <div class="container-fluid py-5" id="real-time">
         <div class="container py-5">
             <div class="row mt-5">
                 <div class="col-md-6 p-0" style="min-height: 400px;">
                     <img class="position-absolute w-100 h-100" src="img/bus.jpg" style="object-fit: cover;">
+                    <div class="left-up-exceed">301-鄂A·JD343</div>
                     <p id="time" class="left-up text-white">{{time}}</p>
-                    <script>
-                        var vm = new Vue({
-                            el: "#time",
-                            data: {
-                                time: Date()
-                            }
-                        })
-                        window.setInterval(() => {
-                            setTimeout(() => {
-                                vm.time = Date()
-                            }, 0)
-                        }, 1000)
-                    </script>
                 </div>
                 <div class="col-md-6 p-0 text-center text-md-left">
-                    <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
-                        <h3 class="mb-3">司机概况</h3>
+                    <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-4">
+                        <h3 class="text-blue">司机概况</h3>
                         <h5 class="text-teal">生理指标</h5>
-                        <div class="position-relative text-teal rounded-pill">
-                            <p>心率：100 血压：100 体温：100 血氧：100</p>
+                        <div class="position-relative text-teal">
+                            <p id="con">心率：{{condition[0]}} 血压：{{condition[1]}}/{{condition[2]}} 体温：{{condition[3]}} 血氧：{{condition[4]}}</p>
                         </div>
                         <h5 class="text-teal">实时图像</h5>
-                        <div class="position-relative text-teal">
-                            <p>状态正常</p>
+                        <div id="po" class="text-teal">
+                            <div class="wrapper bottom">
+                                <p class="bottom">抽烟</p>
+                                <canvas class="bottom" id="rectangle0" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[0]}}</p>
+                                <p class="bottom">闭眼</p>
+                                <canvas class="bottom" id="rectangle1" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[1]}}</p>
+                                <p class="bottom">打哈欠</p>
+                                <canvas class="bottom" id="rectangle2" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[2]}}</p>
+                                <p class="bottom">使用手机</p>
+                                <canvas class="bottom" id="rectangle3" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[3]}}</p>
+                                <p class="bottom mini-text">未系安全带</p>
+                                <canvas class="bottom" id="rectangle4" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[4]}}</p>
+                                <p class="bottom mini-text">视角未看前方</p>
+                                <canvas class="bottom" id="rectangle5" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[5]}}</p>
+                                <p class="bottom mini-text">未正确佩戴口罩</p>
+                                <canvas class="bottom" id="rectangle6" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[6]}}</p>
+                                <p class="bottom mini-text">双手离开方向盘</p>
+                                <canvas class="bottom" id="rectangle7" width="100px" height="10px"></canvas>
+                                <p class="bottom">{{possible[7]}}</p>
+                            </div>
                         </div>
-                        <h3 class="mb-3">疑似异常</h3>
+                        <h3 class="mb-3 text-blue">疑似异常</h3>
                         <div class="position-relative text-teal">
                             <h5 class="text-teal">无</h5>
                         </div>
@@ -96,7 +109,59 @@
             </p>
         </div>
     </div>
+    <script>
+        var vm = new Vue({
+            el: "#time",
+            data: {
+                time: Date()
+            }
+        })
 
+        var po = new Vue({
+            el: "#po",
+            data: {
+                possible: [0.2, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]
+            }
+        })
+
+        var con = new Vue({
+            el: "#con",
+            data: {
+                condition: [98, 98, 98, 98, 98]
+            }
+        })
+
+        function drawOneRect(name, i) {
+            var canvas = document.getElementById(name);
+            canvas.width = canvas.width;
+            var context = canvas.getContext('2d');
+            context.fillStyle = "#20c997"
+            var random = Math.random();
+            Vue.set(po.possible, i, random.toFixed(2));
+            var l = Math.round(random * 100);
+            context.fillRect(0, 0, l, 2);
+        }
+
+        function drawRect() {
+            for (i = 0; i < 8; i++) {
+                drawOneRect("rectangle" + i, i);
+            }
+        }
+
+        function setCon() {
+            for (i = 0; i < 5; i++) {
+                Vue.set(con.condition, i, 50 + Math.round(Math.random() * 50));
+            }
+        }
+
+        window.setInterval(() => {
+            setTimeout(() => {
+                vm.time = Date();
+                drawRect();
+                setCon();
+            }, 0)
+        }, 1000)
+    </script>
     <script src="static/js/jquery-3.4.1.min.js" type="9d47a5dc52c82fb37a1ef233-text/javascript"></script>
     <script src="static/js/bootstrap.bundle.min.js" type="9d47a5dc52c82fb37a1ef233-text/javascript"></script>
     <script src="static/js/easing.min.js" type="9d47a5dc52c82fb37a1ef233-text/javascript"></script>
