link map and info

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -28,9 +28,8 @@
                 <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
             </a>
             <div class="navbar-nav ml-auto py-0">
-                <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />概况</a>
-                <a href="#story" class="fontsize"><img src="img/路线.svg" class="gap" width="30px" />路线</a>
-                <a href="#gallery" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
+                <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
+                <a href="info.html" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
                 <a href="#gallery" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
             </div>
             <div id="box">
