--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <!-- leaflet need -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+    <link rel="stylesheet" href="css/right-menu.css" />
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
     <script src="https://cdn.bootcss.com/proj4js/2.4.3/proj4.js"></script>
     <script src="https://cdn.bootcss.com/proj4leaflet/1.0.1/proj4leaflet.min.js"></script>
@@ -21,25 +22,68 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5">
-        <div class="navbar-collapse justify-content-between" id="toolbar">
-            <a href="index1.html" class="navbar-brand mx-5 d-lg-block">
-                <img src="img/logo.png" width="250px">
-                <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
-            </a>
-            <div class="navbar-nav ml-auto py-0">
-                <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
-                <a href="info.html" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
-                <a href="#gallery" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
+    <div class="fixed-top">
+        <nav class="navbar shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5">
+            <div class="navbar-collapse justify-content-between" id="toolbar">
+                <a href="index1.html" class="navbar-brand mx-5 d-lg-block">
+                    <img src="img/logo.png" width="250px">
+                    <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
+                </a>
+                <div class="navbar-nav ml-auto py-0">
+                    <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
+                    <a href="info.html" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
+                    <a href="#gallery" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
+                </div>
+                <div id="box">
+                    <input type="search" name="search" placeholder="请输入查找司机关键词">
+                    <div id="search">搜索</div>
+                </div>
             </div>
-            <div id="box">
-                <input type="search" name="search" placeholder="请输入查找司机关键词">
-                <div id="search">搜索</div>
-            </div>
+        </nav>
+        <div class="sidebar">
+            <ul>
+                <li>
+                    <div style="background: #FFFFFF;padding-left: 5px;">
+                        <p>a</p>
+                    </div>
+                </li>
+                <li>
+                    <div style="background: #FFFFFF;padding-left: 5px;">
+                        <p>a</p>
+                    </div>
+                </li>
+                <li>
+                    <p>a</p>
+                </li>
+                <li>
+                    <p>a</p>
+                </li>
+                <li>
+                    <p>a</p>
+                </li>
+                <li>
+                    <p>a</p>
+                </li>
+                <li>
+                    <p>a</p>
+                </li>
+                <li>
+                    <p>a</p>
+                </li>
+
+            </ul>
         </div>
-    </nav>
+        <a class="btn">单车概况</a>
+    </div>
     <div id="map"></div>
 </body>
 <script src="./JS/map.js"></script>
+<script type="text/javascript">
+    $('.btn').on('click', function() {
+        $('.btn').toggleClass('btnc');
+        $('.sidebar').toggleClass('side');
+
+    })
+</script>
 
 </html>
