--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -6,11 +6,16 @@
     <meta charset="utf-8">
     <!-- leaflet need -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
-    <link rel="stylesheet" href="css/right-menu.css" />
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
     <script src="https://cdn.bootcss.com/proj4js/2.4.3/proj4.js"></script>
     <script src="https://cdn.bootcss.com/proj4leaflet/1.0.1/proj4leaflet.min.js"></script>
     <script src="./JS/jquery-3.4.1.min.js"></script>
+    <link href="css/style.css" rel="stylesheet">
+    <!-- <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <style type="text/css">
         #map {
             height: 100vh;
@@ -26,7 +31,7 @@
         }
     </style>
     <link href="css/bar.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/right-menu.css" />
 </head>
 
 <body>
@@ -48,7 +53,7 @@
                 </div>
             </div>
         </nav>
-        <div class="sidebar pointer_all">
+        <div class="sidebar pointer_all" style="height: 100vh;">
             <ul id="bus-list">
                 <li id="city">
                     <h5>城市线路</h5>
@@ -73,34 +78,10 @@
                 </li>
             </ul>
         </div>
-        <div class="btn pointer_all" id="scoll"><img src="img/左滑 (1).svg" width="20px">单车概况</div>
+        <div class="btn pointer_all" id="scoll"><img id="slide-img" src="img/slide.svg" width="20px">&nbsp;单车概况</div>
     </div>
     <div id="map"></div>
 </body>
 <script src="./JS/map.js"></script>
-<script type="text/javascript">
-    $('.btn').on('click', function() {
-        $('.sidebar').toggleClass('side');
-
-    })
-    var isSpread = false;
-    $('#city').on('click', function() {
-        if (!isSpread) {
-            for (i = 0; i < 30; i++) {
-                let li = document.createElement('li');
-                let cont = document.createElement('div');
-                cont.setAttribute('style', 'background: #FFFFFF;padding: 5px;');
-                let p = document.createElement('p');
-                p.innerHTML = '301-鄂A·JD343';
-                cont.appendChild(p);
-                li.appendChild(cont);
-                document.getElementById('city-list').appendChild(li);
-            }
-        } else {
-            document.getElementById('city-list').innerHTML = "";
-        }
-        isSpread = !isSpread;
-    })
-</script>
 
 </html>
