--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -55,26 +55,29 @@
         </nav>
         <div class="sidebar pointer_all" style="height: 100vh;">
             <ul id="bus-list">
-                <li id="city">
-                    <h5>城市线路</h5>
+                <li id="1-100">
+                    <h5>1-100</h5>
                 </li>
-                <ul id="city-list">
+                <ul id="1-100-list">
+
+                </ul>
+                <li id="101-200">
+                    <h5>101-200</h5>
+                </li>
+                <ul id="101-200-list">
 
                 </ul>
                 <li>
-                    <h5>东西湖区</h5>
+                    <h5>201-300</h5>
                 </li>
                 <li>
-                    <h5>黄陂区</h5>
+                    <h5>301-400</h5>
                 </li>
                 <li>
-                    <h5>江夏区</h5>
+                    <h5>401-500</h5>
                 </li>
                 <li>
-                    <h5>新洲区</h5>
-                </li>
-                <li>
-                    <h5>蔡甸区</h5>
+                    <h5>501-600</h5>
                 </li>
             </ul>
         </div>
