json形式修改假数据，并加上标签页图标

--- a/BusHelper/wwwroot/index.html
+++ b/BusHelper/wwwroot/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>login</title>
+    <title>公交管家-登陆界面</title>
     <link href="./css/index.css" type="text/css" rel="stylesheet" />
+    <link rel="shortcut icon" href="img/htmllogo.ico">
 </head>
 
 <body id="loginBg">
