--- a/BusHelper/wwwroot/info.html
+++ b/BusHelper/wwwroot/info.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>公交管家-司机信息显示界面</title>
+    <title>公交管家-司机详情</title>
     <script src="JS/vue.js"></script>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bar.css" rel="stylesheet">
     <link href="css/map.css" rel="stylesheet">
     <link href="css/right-menu.css" rel="stylesheet">
+    <link rel="shortcut icon" href="img/htmllogo.ico">
 
     <body>
         <!-- navbar可调整菜单宽度 -->
@@ -151,7 +152,7 @@
                     <h5 class="text-teal">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp当前车内司机状态正常，生理指标处于健康水平，偶有浮动，突发身体疾病概率低。 图像状态正常，无外界因素干扰司机，司机驾驶行为良好，违规次数极低。
                     </h5>
                     <p class="float-left text-dark-blue">司机电话：18572326828</p>
-                    <div class="float-right search pointer-all">立即联系</div>
+                    <div id="contact" class="float-right search pointer-all">立即联系</div>
                 </div>
             </div>
         </div>
@@ -253,6 +254,7 @@
         </script>
         <script src="JS/jquery-3.4.1.min.js"></script>
         <script src="JS/info.js"></script>
+        <script src="JS/alert.js"></script>
     </body>
 
 </html>
