--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>显示公交线路</title>
+    <title>公交管家-总体实况</title>
     <meta charset="utf-8">
     <!-- leaflet need -->
     <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
@@ -19,6 +19,7 @@
     <link href="css/map.css" rel="stylesheet">
     <link href="css/bar.css" rel="stylesheet">
     <link rel="stylesheet" href="css/right-menu.css" />
+    <link rel="shortcut icon" href="img/htmllogo.ico">
 </head>
 
 <body>
