--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -33,7 +33,7 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
                     <a href="info.html" target="_blank" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
-                    <a href="#gallery" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
+                    <a href="mailbox.html" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
                 </div>
                 <div id="box">
                     <input type="search" name="search" placeholder="请输入查找司机关键词">
