adjust color and rules of showing stations' icon

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 
+<!-- 1修改六条线的配色
+    2点图标后弹窗且跟随图标移动
+    3点击右侧的车辆聚焦
+    4点击详情界面跳转到司机界面
+    5开放网址-->
+
 <head>
     <title>公交管家-总体实况</title>
     <meta charset="utf-8">
     <!-- leaflet need -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-    <script src="https://cdn.bootcss.com/proj4js/2.4.3/proj4.js"></script>
-    <script src="https://cdn.bootcss.com/proj4leaflet/1.0.1/proj4leaflet.min.js"></script> -->
     <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/leaflet/1.8.0/leaflet.css">
     </script>
     <script src="https://cdn.bootcdn.net/ajax/libs/leaflet/1.8.0/leaflet.js"></script>
