--- a/BusHelper/wwwroot/brief.html
+++ b/BusHelper/wwwroot/brief.html
@@ -1,2 +1,15 @@
-<b>Hello world!</b>
-<br> I am a popupupupup.....
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>公交管家-总体实况</title>
+    <meta charset="utf-8">
+    <script src="./JS/jquery-3.4.1.min.js"></script>
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <b>Hello world!</b>
+    <br> I am a popupupupup.....
+    <br><br><a href="info.html" class="float-right" target="_blank">>>>详细内容</a><br>
+</body>
