很丑的提示框

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -25,6 +25,22 @@
 </head>
 
 <body>
+    <div id="simpleModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <span class="closeBtn">&times;</span>
+                <h2>预警</h2>
+            </div>
+            <div class="modal-body">
+                <p>2号线路</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nemo? Temporibus velit eligendi neque repudiandae quis, autem vero fuga officia enim quas quibusdam consequuntur nam dolores tempore asperiores repellendus distinctio.</p>
+            </div>
+            <div class="modal-footer">
+                <h3>弹框底部</h3>
+            </div>
+        </div>
+    </div>
+
     <div class="fixed-top pointer_none w100-h100">
         <nav class="navbar shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5 pointer_all">
             <div class="navbar-collapse justify-content-between" id="toolbar">
@@ -76,5 +92,6 @@
     <div id="map"></div>
 </body>
 <script src="./JS/map.js"></script>
+<script src="./JS/alert.js"></script>
 
 </html>
