--- a/BusHelper/wwwroot/mailbox.html
+++ b/BusHelper/wwwroot/mailbox.html
@@ -28,7 +28,7 @@
                 <a href="./info.html" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
                 <a href="#" class="fontsize">
                     <img src="img/信箱.svg" class="gap" width="30px" />信箱
-                    <redpoint style="--num:280">280</redpoint>
+                    <redpoint style="--num:2">2</redpoint>
                 </a>
             </div>
             <div id="box">
@@ -46,7 +46,8 @@
             <sidebar-hr></sidebar-hr>
             <ul class="nav flex-column">
                 <li><a href="#" class="nav-link" onclick="showAllMsg()" id="allBtn">全部消息</a></li>
-                <li><a href="#" class="nav-link active" onclick="showUnseenMsg()" id="unSeenBtn">未读消息</a><redpoint style="--num:280">280</redpoint></li>
+                <li><a href="#" class="nav-link " onclick="showUnseenMsg()" id="unSeenBtn">未读消息</a>
+                    <redpoint style="--num:2">2</redpoint></li>
                 <li><a href="#" class="nav-link" onclick="showSeenMsg()"id="seenBtn">已读消息</a></li>                
             </ul>
         </div>
@@ -72,7 +73,7 @@
                                 </audio>
                             </li>
                             <li class="driver-list-group-item">
-                                <a href="info.html" target="_blank" class="btn btn-primary" role="button">立即联系</a>
+                                <a href="info.html" target="_blank" class="btn btn-primary" role="button">查看详情</a>
                             </li>
                         </ul>
                                               
