添加异常界面

--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -37,7 +37,7 @@
                 <p class="alert">根据系统监测，张三行驶公交车途中多次发生拨打电话行为，请管理员进行核实，及时介入。</p>
             </div>
             <div class="alert-modal-footer">
-                <a href="info.html" target="_blank">
+                <a href="info_error.html" target="_blank">
                     <h3 class="text-white">查看详情</h3>
                 </a>
             </div>
