--- a/BusHelper/wwwroot/mailbox.html
+++ b/BusHelper/wwwroot/mailbox.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
         <!-- 侧边栏 -->
-        <div class="d-flex flex-column sidebar text-blue"  style="width:200px">
+        <div class="d-flex flex-column fixed-sidebar text-blue"  style="width:200px">
             <a href="/" class="sidebar_header text-decoration-none" style="margin:100px auto 20px auto;">
                 <img src="img/信箱.svg" width="80" height="80" />                    
                 <p >司机消息</p>
