--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -19,7 +19,8 @@
     <script src="./JS/jquery-3.4.1.min.js"></script>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/map.css" rel="stylesheet">
-    <link href="css/bar.css" rel="stylesheet">
+    <link href="css/bar.css" rel="stylesheet">    
+    <link href="css/mailbox.css" rel="stylesheet">
     <link rel="stylesheet" href="css/right-menu.css" />
     <link rel="shortcut icon" href="img/htmllogo.ico">
 </head>
@@ -36,7 +37,10 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
                     <a href="info.html" target="_blank" class="fontsize"><img src="img/司机.svg" class="gap" width="30px" />司机</a>
-                    <a href="mailbox.html" class="fontsize"><img src="img/信箱.svg" class="gap" width="30px" />信箱</a>
+                    <a a href="mailbox.html" class="fontsize">
+                        <img src="img/信箱.svg" class="gap" width="30px" />信箱
+                        <!-- <div class="redpoint" id="red1" style="--num:2">{{unread}}</div> -->
+                    </a>
                 </div>
                 <div id="box">
                     <input type="search" name="search" placeholder="请输入查找司机关键词">
@@ -77,5 +81,6 @@
     <div id="map"></div>
 </body>
 <script src="./JS/map.js"></script>
+<script src="JS/mailbox.js"></script>
 
 </html>
