add red dot to top nav of all pages

--- a/BusHelper/wwwroot/mailbox.html
+++ b/BusHelper/wwwroot/mailbox.html
@@ -6,7 +6,8 @@
     <title>公交管家-司机信箱</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/mailbox.css" rel="stylesheet">
-    <link href="css/bar.css" rel="stylesheet">
+    <link href="css/bar.css" rel="stylesheet">    
+    <script src="JS/vue.js"></script>
     <style>
         .container {
             padding-top: 120px;
@@ -38,7 +39,7 @@
         </div>
     </nav>
         <!-- 侧边栏 -->
-        <div class="d-flex flex-column sidebar text-blue"  style="width:200px">
+        <div class="d-flex flex-column fixed-sidebar text-blue"  style="width:200px">
             <a href="/" class="sidebar_header text-decoration-none" style="margin:100px auto 20px auto;">
                 <img src="img/信箱.svg" width="80" height="80" />                    
                 <p >司机消息</p>
@@ -87,7 +88,7 @@
 
         </div>
         <script src="JS/jquery-3.4.1.min.js"></script>
-        <script src="JS/vue.js"></script>
         <script src="JS/mailbox.js"></script>
+        <script src="JS/redpoint.js"></script>
     </body>
 </html>
