--- a/BusHelper/wwwroot/map.html
+++ b/BusHelper/wwwroot/map.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <!-- 预警 -->
     <div id="simpleModal" class="alert-modal">
         <div class="alert-modal-content">
             <div class="alert-modal-header">
@@ -45,12 +46,12 @@
         </div>
     </div>
 
+    <!-- 上边导航栏 -->
     <div class="fixed-top pointer_none w100-h100">
         <nav class="navbar shadow-sm navbar-expand-lg bg-dark py-3 py-lg-0 px-lg-5 pointer_all">
             <div class="navbar-collapse justify-content-between" id="toolbar">
                 <a href="index.html" class="navbar-brand mx-5 d-lg-block">
                     <img src="img/logo.png" width="250px">
-                    <!-- <h5 class="text-white my-n2">云端可视化交互平台</h5> -->
                 </a>
                 <div class="navbar-nav ml-auto py-0">
                     <a href="#about" class="fontsize"><img src="img/概况.svg" class="gap" width="30px" />实况</a>
@@ -95,6 +96,31 @@
         </div>
         <div class="btn pointer_all" id="scoll"><img id="slide-img" src="img/slide.svg" width="20px">&nbsp;单车概况</div>
     </div>
+
+    <!-- 左侧司机消息 -->
+    <div class="pop-panel">
+        <div class="panel-heading">
+            <a href="info.html" target="_blank" class="panel-title" id="title">司机名字 | 8路 | 车牌号</a>
+        </div>
+    
+        <ul class="list-group">
+            <li class="driver-list-group-item ">
+                <a href="info.html" target="_blank">
+                <img src="./media/img/driver1.jpg" alt="张三的照片"height="180" width="100%" >  </a>                                      
+            </li>            
+            <li class="driver-list-group-item">
+                <audio controls style="width: 98%;" id="0">
+                    <source src="./media/audio/music.mp3" type = "audio/mpeg" >
+                    您的浏览器不支持 audio 元素
+                </audio>
+            </li>
+            <li class="driver-list-group-item">
+                <a href="info.html" target="_blank"  class="pop-btn btn-primary" role="button">查看详情</a>
+            </li>
+        </ul>
+                              
+    </div> 
+
     <div id="map"></div>
     <script src="./JS/map.js"></script>
     <script src="./JS/alert.js"></script>
